// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`guideDog basic react comp 1`] = `
Array [
  Object {
    "html": "<h1 data-reactroot=\\"\\">header 1</h1>",
    "level": 1,
    "name": "header 1",
    "role": "heading",
  },
]
`;

exports[`guideDog basic react comp 2 1`] = `
Array [
  Object {
    "html": "<h2 data-reactroot=\\"\\">header 1, level 2</h2>",
    "level": 2,
    "name": "header 1, level 2",
    "role": "heading",
  },
]
`;

exports[`guideDog comp with props 1`] = `
Array [
  Object {
    "html": "props.text",
    "name": "props.text",
    "role": "text",
  },
]
`;

exports[`guideDog landmarks 1`] = `
Array [
  Object {
    "html": "<header><div>raw text</div></header>",
    "name": "",
    "role": "banner",
  },
  Object {
    "html": "<main><h1>header 1</h1></main>",
    "name": "",
    "role": "main",
  },
  Object {
    "html": "<footer><h1>header 2</h1></footer>",
    "name": "",
    "role": "contentinfo",
  },
]
`;

exports[`guideDog string 1`] = `
Array [
  Object {
    "html": "<h1>header 1</h1>",
    "level": 1,
    "name": "header 1",
    "role": "heading",
  },
]
`;

exports[`guideDog string 2 1`] = `
Array [
  Object {
    "html": "raw text",
    "name": "raw text",
    "role": "text",
  },
  Object {
    "html": "<h1>header 1</h1>",
    "level": 1,
    "name": "header 1",
    "role": "heading",
  },
  Object {
    "html": "<h1>header 2</h1>",
    "level": 1,
    "name": "header 2",
    "role": "heading",
  },
]
`;

exports[`guideDog tabable elements 1`] = `
Array [
  Object {
    "html": "raw text",
    "name": "raw text",
    "role": "text",
  },
  Object {
    "html": "<h1>header 1</h1>",
    "level": 1,
    "name": "header 1",
    "role": "heading",
  },
  Object {
    "html": "<a href=\\"test\\">Link 1</a>",
    "name": "Link 1",
    "role": "link",
  },
  Object {
    "html": "<a href=\\"test\\">Link 2</a>",
    "name": "Link 2",
    "role": "link",
  },
  Object {
    "html": "Your Name:",
    "name": "Your Name:",
    "role": "text",
  },
  Object {
    "html": "<input type=\\"text\\" name=\\"name\\">",
    "name": "",
    "role": "textbox",
  },
]
`;

exports[`guideDog tabable elements 2`] = `
Array [
  Object {
    "html": "<a href=\\"test\\">Link 1</a>",
    "name": "Link 1",
    "role": "link",
  },
  Object {
    "html": "<a href=\\"test\\">Link 2</a>",
    "name": "Link 2",
    "role": "link",
  },
  Object {
    "html": "<input type=\\"text\\" name=\\"name\\">",
    "name": "",
    "role": "textbox",
  },
]
`;
